# OpenWallpaper-Manager

./: .gitmodules  CMakeLists.txt  README.md
Manager/: CMakeLists.txt
Manager/Resources/: Adwaita_link.txt  CMakeLists.txt
Manager/Source/: communication.cpp  communication.hpp  debug.hpp  main.cpp  package_manager.cpp  package_manager.hpp  package_model.cpp  package_model.hpp  settings.cpp  settings.hpp  shared.hpp
Manager/Source/qml/: BottomBar.qml  InfoPopup.qml  PackageGrid.qml  PlaybackPopup.qml  Settings.qml  main.qml
Manager/Source/qrc/: qml.qrc
xdg/: CMakeLists.txt  openwallpaper-manager.appdata.xml  openwallpaper-manager.desktop
